<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:orientation="vertical">
    <include layout="@layout/actionbar_home"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/txtNum"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/textbox_hint"
            android:inputType="numberDecimal"/>
            <Spinner
            android:id="@+id/spnUnit"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_header"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/yellow"
                android:background="@color/design_default_color_primary_dark"
                android:padding="5dp"/>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lblHaily"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:padding="10dp"

                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:layout_gravity="center"
                    android:text="@string/hai_ly"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/lblDam"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:padding="10dp"
                    android:layout_weight="1"

                    android:textColor="@color/black"
                    android:textSize="18sp"/>
                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/dam"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:padding="10dp"
                    android:textStyle="bold"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/lblKm"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="10dp"
                    android:padding="10dp"

                    android:textSize="18sp"/>
                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/kilometer"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:padding="10dp"
                    android:textColor="@color/black"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/lblLy"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"

                    android:textSize="18sp"
                    android:layout_marginStart="10dp"
                    android:padding="10dp"/>
                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/ly"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:padding="10dp"
                    android:textColor="@color/black"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/lblMet"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"

                    android:textSize="18sp"
                    android:layout_marginStart="10dp"
                    android:padding="10dp"/>
                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/met"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:padding="10dp"
                    android:textColor="@color/black"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/lblYard"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"

                    android:textSize="18sp"
                    android:layout_marginStart="10dp"
                    android:padding="10dp"/>
                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/yard"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:padding="10dp"
                    android:textColor="@color/black"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                        android:id="@+id/lblFoot"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"

                    android:textSize="18sp"
                    android:layout_marginStart="10dp"
                    android:padding="10dp"/>
                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/foot"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:padding="10dp"
                    android:textColor="@color/black"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/lblInches"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"

                    android:textSize="18sp"
                    android:layout_marginStart="10dp"
                    android:padding="10dp"/>
                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/inches"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:padding="10dp"
                    android:textColor="@color/black"/>
            </TableRow>

        </TableLayout>

    </ScrollView>

</LinearLayout>